-- updated tensor functions (fixed bug) + function TensorClass

--- a/tests/modules/vision.ipynb
+++ b/tests/modules/vision.ipynb
@@ -103,6 +103,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# validation that MNIST is the same\n",
+    "\n",
+    "# validation\n",
+    "\n",
+    "my_train_data=MNIST(root='data',train=True) #Dataset\n",
+    "my_train_tensor=my_train_data.data #Tensor\n",
+    "my_train_ndarray=my_train_tensor.data #ndarray\n",
+    "my_train_in_torch_tensor=torch.tensor(my_train_ndarray) #torch.tensor\n",
+    "\n",
+    "torch_train_data=datasets.MNIST(root='data',train=True,download=True) #torchvision.datasets.MNIST\n",
+    "torch_train_tensor=torch_train_data.data #torch.Tensor\n",
+    "# print(type(torch_train_data.data)) # <class 'torch.Tensor'>\n",
+    "\n",
+    "print(torch.all(my_train_in_torch_tensor==torch_train_tensor))\n",
+    "# tensor(True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
