--- a/tests/mocks/vision.ipynb
+++ b/tests/mocks/vision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,34 +132,22 @@
     "    print(train_data[i][0].shape, train_data[i][1])\n",
     "\n",
     "for x,y in train_data:\n",
-    "    print(f'x type: {type(x)}, y type: {type(y)}')\n",
+    "    print(f'x type: {type(x)} and dtype: {x.dtype}, y type: {type(y)}')\n",
     "    print(f'x shape: {x.shape}, y shape: no shape its an int')\n",
-    "    print('data:', x)\n",
-    "    print('label:', y)\n",
+    "    # print('data:', x)\n",
+    "    # print('label:', y)\n",
     "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Image' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m torch_train_data \u001b[38;5;241m=\u001b[39m datasets\u001b[38;5;241m.\u001b[39mMNIST(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m, train\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, download\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mtorch_train_data\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m, torch_train_data[i][\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x,y \u001b[38;5;129;01min\u001b[39;00m torch_train_data:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx type: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(x)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and dtype: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, y type: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(y)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Image' object has no attribute 'shape'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch_train_data = datasets.MNIST('data', train=True, download=True)\n",
     "for i in range(5):\n",
-    "    print(torch_train_data[i][0].shape, torch_train_data[i][1])\n",
+    "    print(torch_train_data[i][0], torch_train_data[i][1])\n",
     "for x,y in torch_train_data:\n",
     "    print(f'x type: {type(x)} and dtype: {x.dtype}, y type: {type(y)}')\n",
     "    print(f'x shape: {x.shape}, y shape: no shape its an int')\n",
@@ -218,19 +206,23 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m DataLoader(\u001b[43mtrain_data\u001b[49m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m32\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " >>> data/MNIST/raw/t10k-labels-idx1-ubyte.gz already exists <<<\n",
+      " >>> data/MNIST/raw/t10k-labels-idx1-ubyte already exists <<<\n",
+      " >>> data/MNIST/raw/train-images-idx3-ubyte.gz already exists <<<\n",
+      " >>> data/MNIST/raw/train-images-idx3-ubyte already exists <<<\n",
+      " >>> data/MNIST/raw/t10k-images-idx3-ubyte.gz already exists <<<\n",
+      " >>> data/MNIST/raw/t10k-images-idx3-ubyte already exists <<<\n",
+      " >>> data/MNIST/raw/train-labels-idx1-ubyte.gz already exists <<<\n",
+      " >>> data/MNIST/raw/train-labels-idx1-ubyte already exists <<<\n"
      ]
     }
    ],
    "source": [
-    "train_loader = DataLoader(train_data, batch_size=32)"
+    "my_train_data=MNIST(root='data',train=True) #Dataset\n",
+    "train_loader = DataLoader(my_train_data, batch_size=32)"
    ]
   },
   {
@@ -396,12 +388,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "batch number: 0 | x shape: (32, 1, 28, 28)  |  y: (32,), type y: <class 'tensor.Tensor'>\n",
+      "batch number: 1 | x shape: (32, 1, 28, 28)  |  y: (32,), type y: <class 'tensor.Tensor'>\n",
+      "batch number: 2 | x shape: (32, 1, 28, 28)  |  y: (32,), type y: <class 'tensor.Tensor'>\n",
+      "batch number: 3 | x shape: (32, 1, 28, 28)  |  y: (32,), type y: <class 'tensor.Tensor'>\n",
+      "batch number: 4 | x shape: (32, 1, 28, 28)  |  y: (32,), type y: <class 'tensor.Tensor'>\n",
+      "batch number: 5 | x shape: (32, 1, 28, 28)  |  y: (32,), type y: <class 'tensor.Tensor'>\n"
+     ]
+    }
+   ],
    "source": [
     "for i,(x, y) in enumerate(train_loader):\n",
-    "    print(f'batch number: {i} | x shape: {x.shape}  |  y: {y}, type y: {type(y)}')\n",
+    "    print(f'batch number: {i} | x shape: {x.shape}  |  y: {y.shape}, type y: {type(y)}')\n",
     "    if i==5:\n",
     "        break"
    ]
