-- testing installtion on colab (3)

--- a/example/MNIST_model.ipynb
+++ b/example/MNIST_model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# che3le 🔥 - A Neural Network Library\n",
     "\n",
-    "[![GitHub](https://img.shields.io/badge/GitHub-che3le-black)](https://github.com/deeplearning-oop/2425-m1geniomhe-group-1)[![Version](https://img.shields.io/badge/version-1.0.1-grassgreen)](./dev/changelog.md)  ![Build](https://img.shields.io/badge/installation-pip-brightgreen) [![Python](https://img.shields.io/badge/python-3.+-blue)](https://www.python.org/downloads/release/python-390/)  [![License](https://img.shields.io/badge/license-MIT-orange)](./LICENSE.md)  [![Submission](https://img.shields.io/badge/submission-successful_:\\)-yellow)](./docs/readme.md)\n",
+    "[![GitHub](https://img.shields.io/badge/GitHub-che3le-black)](https://github.com/deeplearning-oop/2425-m1geniomhe-group-1)[![Version](https://img.shields.io/badge/version-1.0.1-grassgreen)](./dev/changelog.md)  ![Build](https://img.shields.io/badge/installation-pip-brightgreen) [![Python](https://img.shields.io/badge/python-3.6+-blue)](https://www.python.org/downloads/release/python-390/)  [![License](https://img.shields.io/badge/license-MIT-orange)](./LICENSE.md)  [![Submission](https://img.shields.io/badge/submission-successful_:\\)-yellow)](./docs/readme.md)\n",
     "\n",
     "This is a demo notebook to portray the performance of out neural network library called `che3le`. For reference please check the [github repository](https://github.com/deeplearning-oop/2425-m1geniomhe-group-1).  \n",
     "\n",
